--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "vue": "^2.6.11",
+    "vue-qriously": "^1.1.1",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0"
